# ggotAI-mono

./: .gitignore  PRD.md  README.md  Task_List.md  ggotAIhp.pptx  ggotAIorder.pptx  implementation_plan.md  index.html  install_autostart.ps1  task.md
backend/: README.md  pyproject.toml  requirements.txt  run_dev.py
backend/src/ggotaiorder/: __init__.py  config.py  logging_setup.py  orchestrator.py  service.py  tray.py
backend/src/ggotaiorder/api/: repository.py  routes.py  service.py  storage.py
backend/src/ggotaiorder/core/: crypto.py  (+1 more)
backend/tests/: test_api_routes.py  test_api_service.py  test_config.py  test_crypto.py  test_notifier.py  test_orchestrator.py  test_phase4_e2e.py  test_phase4_frontend_schema.py  test_phase4_schema.py  test_phase4_schema_contract.py  test_pipeline_catchup.py  test_pipeline_delivery_at.py  test_pipeline_engine.py  test_pipeline_extractor_live.py  test_pipeline_filter.py  test_pipeline_models.py  test_pipeline_stt.py  test_pipeline_stt_http.py  test_pipeline_stt_live.py  test_realtime_listener.py  test_rpa_backup.py  test_rpa_singleton.py  test_smoke.py
backend/tests/support/: schema_contract.py
ggotAIorder/backend/: README.md  pyproject.toml  requirements.txt  run_dev.py
ggotAIorder/backend/scripts/: enable_rpa_shop.py
ggotAIorder/backend/tests/: test_config.py  test_crypto.py  test_heartbeat.py  test_notifier.py  test_notifier_bizm.py  test_notifier_iwinv.py  test_phase4_e2e.py  test_phase4_schema.py  test_pipeline_catchup.py  test_pipeline_delivery_at.py  test_pipeline_engine.py  test_pipeline_extractor.py  test_pipeline_extractor_live.py  test_pipeline_filter.py  test_pipeline_models.py  test_rpa_factory.py  test_rpa_flowernt3_fill.py  test_rpa_flowernt3_launch.py  test_rpa_flowernt3_mapping.py  test_rpa_program_settings.py  test_rpa_retry.py  test_rpa_singleton.py  test_scraper.py  test_smoke.py
(+299 files in other folders)
